--- a/po/nb.po
+++ b/po/nb.po
@@ -1,21 +1,21 @@
 # @TITLE@
 # Copyright (C) 2006, SUSE Linux GmbH, Nuremberg
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # This file is distributed under the same license as @PACKAGE@ package. FIRST
 #
+# Olav Pettershagen <olpetter@bbnett.no>, 2013.
 msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-07-04 10:40+0200\n"
-"PO-Revision-Date: 2005-08-11 20:37+0200\n"
-"Last-Translator: Olav Pettershagen <olav.pet@online.no>\n"
-"Language-Team:  <nb@li.org>\n"
-"Language: \n"
+"POT-Creation-Date: 2014-09-29 11:55+0200\n"
+"PO-Revision-Date: 2013-10-04 18:20+0200\n"
+"Last-Translator: Olav Pettershagen <olpetter@bbnett.no>\n"
+"Language-Team: Norwegian Bokmål <i18n-nb@lister.ping.uio.no>\n"
+"Language: nb\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.10.2\n"
+"X-Generator: Lokalize 1.5\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../client/snapper.cc:599 ../client/snapper.cc:733
@@ -58,7 +58,7 @@ msgstr ""
 
 #: ../client/snapper.cc:1495
 msgid "\t--no-dbus\t\t\tOperate without DBus."
-msgstr ""
+msgstr "\t--no-dbus\t\t\tBruk systemet uten DBus."
 
 #: ../client/snapper.cc:914
 msgid "\t--output, -o <file>\t\tSave status to file."
@@ -143,9 +143,8 @@ msgid "\tsnapper diff <number1>..<number2> [files]"
 msgstr "\tsnapper diff <nummer1>..<nummer2> [filer]"
 
 #: ../client/snapper.cc:293
-#, fuzzy
 msgid "\tsnapper get-config"
-msgstr "\tsnapper delete-config"
+msgstr "\tsnapper get-config"
 
 #: ../client/snapper.cc:381
 msgid "\tsnapper list"
@@ -169,9 +168,8 @@ msgid "\tsnapper rollback [number]"
 msgstr "\tsnapper mount <nummer>"
 
 #: ../client/snapper.cc:349
-#, fuzzy
 msgid "\tsnapper set-config <configdata>"
-msgstr "\tsnapper list-configs"
+msgstr "\tsnapper set-config <configdata>"
 
 #: ../client/snapper.cc:911
 msgid "\tsnapper status <number1>..<number2>"
@@ -186,9 +184,8 @@ msgid "\tsnapper undochange <number1>..<number2> [files]"
 msgstr "\tsnapper undochange <nummer1>..<nummer2> [filer]"
 
 #: ../client/snapper.cc:1391
-#, fuzzy
 msgid "\tsnapper xadiff <number1>..<number2> [files]"
-msgstr "\tsnapper diff <nummer1>..<nummer2> [filer]"
+msgstr "\tsnapper xadiff <number1>..<number2> [filer]"
 
 #: ../client/snapper.cc:1488
 msgid "    Global options:"
@@ -228,9 +225,8 @@ msgid "  Cleanup snapshots:"
 msgstr "  Rydde opp i øyeblikksbilder:"
 
 #: ../client/snapper.cc:1390
-#, fuzzy
 msgid "  Comparing snapshots extended attributes:"
-msgstr "  Sammenligne øyeblikksbilder:"
+msgstr "  Sammenligne utvidede attrubutter for øyeblikksbilder:"
 
 #: ../client/snapper.cc:910 ../client/snapper.cc:965
 msgid "  Comparing snapshots:"
@@ -253,9 +249,8 @@ msgid "  Delete snapshot:"
 msgstr "  Slette øyeblikksbilde:"
 
 #: ../client/snapper.cc:292
-#, fuzzy
 msgid "  Get config:"
-msgstr "  Opprette oppsett:"
+msgstr "  Hent oppsett:"
 
 #: ../client/snapper.cc:138
 msgid "  List configs:"
@@ -276,12 +271,11 @@ msgstr "  Montere øyeblikksbilde:"
 #: ../client/snapper.cc:1217
 #, fuzzy
 msgid "  Rollback:"
-msgstr "Tilbakestillingsstøtte: "
+msgstr "Gå tilbake"
 
 #: ../client/snapper.cc:348
-#, fuzzy
 msgid "  Set config:"
-msgstr "  Opprette oppsett:"
+msgstr "  Definer oppsett:"
 
 #: ../client/snapper.cc:873
 msgid "  Umount snapshot:"
@@ -302,19 +296,19 @@ msgid "(Snapshot %d.)"
 msgstr "Øyeblikksbildet '%u' ikke funnet."
 
 # error box title
-#: ../client/snapper.cc:1669 ../client/errors.cc:88
+#: ../client/snapper.cc:1670 ../client/errors.cc:88
 #, fuzzy
 msgid "ACL error."
-msgstr "Inn/ut-feil."
+msgstr "Feil under oppretting"
 
 #: ../client/snapper.cc:436
 msgid "Cleanup"
 msgstr "Rydde opp"
 
-#: ../client/snapper.cc:1624
-#, fuzzy, c-format
+#: ../client/snapper.cc:1625
+#, c-format
 msgid "Command '%s' does not work without DBus."
-msgstr "Kommandoen 'list' tar ikke argumenter."
+msgstr "Kommandoen «%s» fungerer ikke uten DBus."
 
 #: ../client/snapper.cc:1337
 msgid "Command 'cleanup' needs one arguments."
@@ -345,9 +339,8 @@ msgid "Command 'diff' needs at least one argument."
 msgstr "Kommandoen 'diff' trenger minst ett argument."
 
 #: ../client/snapper.cc:304
-#, fuzzy
 msgid "Command 'get-config' does not take arguments."
-msgstr "Kommandoen 'delete-config' tar ikke argumenter."
+msgstr "Kommandoen «get-config» tar ikke argumenter."
 
 #: ../client/snapper.cc:1481
 msgid "Command 'help' does not take arguments."
@@ -380,9 +373,8 @@ msgid "Command 'rollback' takes either one or no argument."
 msgstr "rename krever to argumenter"
 
 #: ../client/snapper.cc:360
-#, fuzzy
 msgid "Command 'set-config' needs at least one argument."
-msgstr "Kommandoen 'mount' trenger minst ett argument."
+msgstr "Kommandoen «set-config» trenger minst ett argument."
 
 #: ../client/snapper.cc:930
 msgid "Command 'status' needs one argument."
@@ -393,23 +385,22 @@ msgid "Command 'undochange' needs at least one argument."
 msgstr "Kommandoen 'undochange' trenger minst ett argument."
 
 #: ../client/snapper.cc:1416
-#, fuzzy
 msgid "Command 'xadiff' needs at least one argument."
-msgstr "Kommandoen 'diff' trenger minst ett argument."
+msgstr "Kommandoen «xadiff» trenger minst ett argument."
 
 #: ../client/snapper.cc:157
 msgid "Config"
 msgstr "Oppsett"
 
-#: ../client/snapper.cc:1644
+#: ../client/snapper.cc:1645
 #, c-format
 msgid "Config '%s' is invalid."
 msgstr "Oppsettet '%s' er ugyldig."
 
-#: ../client/snapper.cc:1639
-#, fuzzy, c-format
+#: ../client/snapper.cc:1640
+#, c-format
 msgid "Config '%s' not found."
-msgstr "Filen '%s' ikke funnet."
+msgstr "Oppsettet «%s» ikke funnet."
 
 #: ../client/errors.cc:58
 msgid "Config is in use."
@@ -429,14 +420,15 @@ msgstr "Filen '%s' ikke funnet på medium '%s'"
 msgid "Configdata '%s' has empty key."
 msgstr ""
 
-#: ../client/snapper.cc:1654 ../client/errors.cc:70
+#: ../client/snapper.cc:1655 ../client/errors.cc:70
 #, c-format
 msgid "Creating config failed (%s)."
 msgstr "Oppsett kunne ikke opprettes (%s)."
 
 #: ../client/snapper.cc:1297
+#, fuzzy
 msgid "Creating read-only snapshot of current system."
-msgstr ""
+msgstr "%s -regel støttes ikke på dette systemet.\n"
 
 #: ../client/snapper.cc:1278
 #, fuzzy
@@ -460,7 +452,7 @@ msgstr "Diskbilde kunne ikke opprettes."
 msgid "Date"
 msgstr "Dato"
 
-#: ../client/snapper.cc:1659 ../client/errors.cc:73
+#: ../client/snapper.cc:1660 ../client/errors.cc:73
 #, c-format
 msgid "Deleting config failed (%s)."
 msgstr "Oppsett kunne ikke slettes (%s)."
@@ -478,8 +470,9 @@ msgid "Detecting filesystem type failed."
 msgstr "Registrering av filsystemtype mislyktes"
 
 #: ../client/misc.cc:170
+#, fuzzy
 msgid "Empty configdata."
-msgstr ""
+msgstr "Ugyldige oppsettdata."
 
 #: ../client/misc.cc:107 ../client/misc.cc:115
 #, fuzzy
@@ -487,10 +480,11 @@ msgid "Empty userdata."
 msgstr "Ugyldige brukerdata."
 
 #: ../client/snapper.cc:1198 ../client/snapper.cc:1208
+#, fuzzy
 msgid "Failed to initialize filesystem handler."
-msgstr ""
+msgstr "Kunne ikke install filhåndterer"
 
-#: ../client/systemd-helper.cc:127 ../client/snapper.cc:1698
+#: ../client/systemd-helper.cc:127 ../client/snapper.cc:1699
 msgid "Failure"
 msgstr "Mislyktes"
 
@@ -517,12 +511,11 @@ msgstr "Identiske øyeblikksbilder."
 msgid "Illegal Snapshot."
 msgstr "Ugyldig øyeblikksbilde."
 
-#: ../client/snapper.cc:1664 ../client/errors.cc:49
-#, fuzzy
+#: ../client/snapper.cc:1665 ../client/errors.cc:49
 msgid "Invalid configdata."
-msgstr "Ugyldige brukerdata."
+msgstr "Ugyldige oppsettdata."
 
-#: ../client/snapper.cc:1679 ../client/errors.cc:85
+#: ../client/snapper.cc:1680 ../client/errors.cc:85
 #, fuzzy
 msgid "Invalid group."
 msgstr "Ugyldig undervolum."
@@ -545,7 +538,7 @@ msgstr "Ugyldig undervolum."
 msgid "Invalid table style %d."
 msgstr "Ugyldig tabellstil %d."
 
-#: ../client/snapper.cc:1674 ../client/errors.cc:82
+#: ../client/snapper.cc:1675 ../client/errors.cc:82
 #, fuzzy
 msgid "Invalid user."
 msgstr "Ugyldige brukerdata."
@@ -556,9 +549,9 @@ msgstr "Ugyldige brukerdata."
 
 #: ../client/snapper.cc:311
 msgid "Key"
-msgstr ""
+msgstr "Nøkkel"
 
-#: ../client/snapper.cc:1649
+#: ../client/snapper.cc:1650
 #, c-format
 msgid "Listing configs failed (%s)."
 msgstr "Oppsett kunne ikke vises (%s)."
@@ -581,7 +574,7 @@ msgstr "Manglende kommandoargument."
 msgid "Missing or invalid pre-number."
 msgstr "Manglende eller ugyldig før-nummer."
 
-#: ../client/snapper.cc:1602
+#: ../client/snapper.cc:1603
 msgid "No command provided."
 msgstr "Ingen kommando gitt"
 
@@ -628,7 +621,7 @@ msgstr "Øyeblikksbildet er i bruk."
 msgid "Subvolume"
 msgstr "Undervolum"
 
-#: ../client/snapper.cc:1603 ../client/snapper.cc:1616
+#: ../client/snapper.cc:1604 ../client/snapper.cc:1617
 #: ../client/utils/GetOpts.cc:61 ../client/utils/GetOpts.cc:69
 msgid "Try 'snapper --help' for more information."
 msgstr "Forsøk 'snapper --help' for mer informasjon."
@@ -642,7 +635,7 @@ msgstr "Type"
 msgid "Unknown cleanup algorithm '%s'."
 msgstr "Ukjent oppryddingsalgoritme '%s'."
 
-#: ../client/snapper.cc:1615
+#: ../client/snapper.cc:1616
 #, c-format
 msgid "Unknown command '%s'."
 msgstr "Ukjent kommando '%s'."
@@ -698,7 +691,7 @@ msgstr ""
 
 #: ../client/snapper.cc:312
 msgid "Value"
-msgstr ""
+msgstr "Verdi"
 
 #: ../client/snapper.cc:1133
 #, c-format
@@ -771,6 +764,10 @@ msgstr "bruk: snapper [--globale valg] <kommando> [--kommandovalg] [kommandoargu
 #~| msgid "File '%s' not found on medium '%s'"
 #~ msgid "File '%s' not found in diff."
 #~ msgstr "Filen '%s' ikke funnet på medium '%s'"
+
+#~| msgid "Rollback Support: "
+#~ msgid "  Rollback snapshots:"
+#~ msgstr "Tilbakestillingsstøtte: "
 
 #~| msgid "diff needs two arguments"
 #~ msgid "Command 'diff' needs two arguments."
