--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -1,18 +1,24 @@
-# Copyright (C) 2006 SuSE Linux Products GmbH, Nuernberg
-# This file is distributed under the same license as the package.
+# @TITLE@
+# Copyright (C) 2006, SUSE Linux GmbH, Nuremberg
 #
+# This file is distributed under the same license as @PACKAGE@ package. FIRST
+#
+# margurite <i@marguerite.su>, 2012, 2013.
+# 玛格丽特 · 苏 <marguerite@opensuse.org>, 2013, 2014.
 msgid ""
 msgstr ""
-"Project-Id-Version: snapper\n"
+"Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-07-01 11:36+0200\n"
-"PO-Revision-Date: 2014-07-15 11:28\n"
-"Last-Translator: Novell language <language@novell.com>\n"
-"Language-Team: Novell language <language@novell.com>\n"
-"Language: \n"
+"POT-Creation-Date: 2014-09-29 11:55+0200\n"
+"PO-Revision-Date: 2014-07-04 17:52+0800\n"
+"Last-Translator: 玛格丽特 · 苏 <marguerite@opensuse.org>\n"
+"Language-Team: Chinese Traditional <kde-i18n-doc@kde.org>\n"
+"Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Lokalize 1.5\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
 #: ../client/snapper.cc:599 ../client/snapper.cc:733
 msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshot."
@@ -20,7 +26,7 @@ msgstr "\t--cleanup-algorithm, -c <算法> \t快照的清空算法。"
 
 #: ../client/snapper.cc:1223
 msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
-msgstr "\t--cleanup-algorithm、-c <算法>\t快照的清理算法。"
+msgstr "\t--cleanup-algorithm, -c <算法>\t快照的清空算法。"
 
 #: ../client/snapper.cc:601
 msgid "\t--command <command>\tRun command and create pre and post snapshots."
@@ -28,23 +34,23 @@ msgstr "\t--command <命令> \t运行命令，创建前期和后期快照。"
 
 #: ../client/snapper.cc:1494
 msgid "\t--config, -c <name>\t\tSet name of config to use."
-msgstr "\t--config, -c <名称>\t\t设置要使用的配置的名称。"
+msgstr "\t--config, -c <配置名称> \t\t设置要使用的配置名称。"
 
 #: ../client/snapper.cc:598 ../client/snapper.cc:732
 msgid "\t--description, -d <description>\tDescription for snapshot."
-msgstr "\t--description, -d <描述>\t快照的描述。"
+msgstr "\t--description, -d <描述> \t快照描述。"
 
 #: ../client/snapper.cc:1222
 msgid "\t--description, -d <description>\tDescription for snapshots."
-msgstr "\t--description、-d <描述>\t快照的描述。"
+msgstr "\t--description, -d <描述>\t快照描述。"
 
 #: ../client/snapper.cc:195
 msgid "\t--fstype, -f <fstype>\t\tManually set filesystem type."
-msgstr "\t--fstype, -f <文件系统类型>\t\t手动设置文件系统类型。"
+msgstr "\t--fstype, -f <文件系统类型> \t\t手动设置文件系统类型。"
 
 #: ../client/snapper.cc:1028
 msgid "\t--input, -i <file>\t\tRead files for which to undo changes from file."
-msgstr "\t--input, -i <文件>\t\t读取要撤销文件更改的文件。"
+msgstr "\t--input, -i <文件> \t\t读取要回滚的文件。"
 
 #: ../client/snapper.cc:1492
 msgid "\t--iso\t\t\t\tDisplay dates and times in ISO format."
@@ -52,7 +58,7 @@ msgstr "\t--iso\t\t\t\t以 ISO 格式显示日期和时间。"
 
 #: ../client/snapper.cc:1495
 msgid "\t--no-dbus\t\t\tOperate without DBus."
-msgstr "\t--no-dbus\t\t\t不用 DBus 执行。"
+msgstr "\t--no-dbus\t\t\t不是用 DBus。"
 
 #: ../client/snapper.cc:914
 msgid "\t--output, -o <file>\t\tSave status to file."
@@ -60,35 +66,35 @@ msgstr "\t--output, -o <文件> \t\t保存状态到文件。"
 
 #: ../client/snapper.cc:596
 msgid "\t--pre-number <number>\t\tNumber of corresponding pre snapshot."
-msgstr "\t--pre-number <编号>\t\t相应前快照的编号。"
+msgstr "\t--pre-number <编号> \t\t相关的前期快照编号。"
 
 #: ../client/snapper.cc:597
 msgid "\t--print-number, -p\t\tPrint number of created snapshot."
-msgstr "\t--print-number, -p\t\t已创建快照的打印编号。"
+msgstr "\t--print-number, -p \t\t打印所创建快照的编号。"
 
 #: ../client/snapper.cc:1221
 msgid "\t--print-number, -p\t\tPrint number of second created snapshot."
-msgstr "\t--print-number、-p\t\t打印第二个创建的快照的编号。"
+msgstr "\t--print-number, -p\t\t打印所创建的第二个快照的编号。"
 
 #: ../client/snapper.cc:1489
 msgid "\t--quiet, -q\t\t\tSuppress normal output."
-msgstr "\t--quiet, -q\t\t\t禁止正常输出。"
+msgstr "\t--quiet, -q\t\t\t静默正常输出。"
 
 #: ../client/snapper.cc:1493
 msgid "\t--table-style, -t <style>\tTable style (integer)."
-msgstr "\t--table-style, -t <样式>\t表样式（整数）。"
+msgstr "\t--table-style, -t <样式> \t表格样式 (整数)。"
 
 #: ../client/snapper.cc:196
 msgid "\t--template, -t <name>\t\tName of config template to use."
-msgstr "\t--template, -t <名称>\t\t要使用的配置模板的名称。"
+msgstr "\t--template, -t <名称> \t\t要使用的配置模板名称。"
 
 #: ../client/snapper.cc:595
 msgid "\t--type, -t <type>\t\tType for snapshot."
-msgstr "\t--type, -t <类型>\t\t快照的类型。"
+msgstr "\t--type, -t <类型> \t\t快照类型。"
 
 #: ../client/snapper.cc:384
 msgid "\t--type, -t <type>\t\tType of snapshots to list."
-msgstr "\t--type, -t <类型>\t\t要列出的快照类型。"
+msgstr "\t--type, -t <类型> \t\t要列出的快照类型。"
 
 #: ../client/snapper.cc:600 ../client/snapper.cc:734
 msgid "\t--userdata, -u <userdata>\tUserdata for snapshot."
@@ -96,23 +102,23 @@ msgstr "\t--userdata, -u <用户数据> \t快照的用户数据。"
 
 #: ../client/snapper.cc:1224
 msgid "\t--userdata, -u <userdata>\tUserdata for snapshots."
-msgstr "\t--userdata、-u <用户数据>\t快照的用户数据。"
+msgstr "\t--userdata, -u <用户数据>\t快照的用户数据。"
 
 #: ../client/snapper.cc:1491
 msgid "\t--utc\t\t\t\tDisplay dates and times in UTC."
-msgstr "\t--utc\t\t\t\t以 UTC 格式显示日期和时间。"
+msgstr "\t--utc\t\t\t\t以 UTC 显示日期和时间。"
 
 #: ../client/snapper.cc:1490
 msgid "\t--verbose, -v\t\t\tIncrease verbosity."
-msgstr "\t--verbose, -v\t\t\t增加详细描述。"
+msgstr "\t--verbose, -v\t\t\t显示调试信息。"
 
 #: ../client/snapper.cc:1496
 msgid "\t--version\t\t\tPrint version and exit."
-msgstr "\t--version\t\t\t打印版本并退出。"
+msgstr "\t--version\t\t\t打印版本号并退出。"
 
 #: ../client/snapper.cc:1326
 msgid "\tsnapper cleanup <cleanup-algorithm>"
-msgstr "\tsnapper cleanup <清理算法>"
+msgstr "\tsnapper cleanup <清空算法>"
 
 #: ../client/snapper.cc:592
 msgid "\tsnapper create"
@@ -172,11 +178,11 @@ msgstr "\tsnapper umount <编号>"
 
 #: ../client/snapper.cc:1025
 msgid "\tsnapper undochange <number1>..<number2> [files]"
-msgstr "\tsnapper undochange <编号 1>..<编号 2> [文件]"
+msgstr "\tsnapper undochange  <编号1>..<编号2> [文件]"
 
 #: ../client/snapper.cc:1391
 msgid "\tsnapper xadiff <number1>..<number2> [files]"
-msgstr "\tsnapper xadiff <编号 1>..<编号 2> [文件]"
+msgstr "\tsnapper xadiff <编号1>..<编号2> [文件]"
 
 #: ../client/snapper.cc:1488
 msgid "    Global options:"
@@ -184,23 +190,23 @@ msgstr "    全局选项："
 
 #: ../client/snapper.cc:594
 msgid "    Options for 'create' command:"
-msgstr "    “create”命令的选项："
+msgstr "    'create' 命令的选项："
 
 #: ../client/snapper.cc:194
 msgid "    Options for 'create-config' command:"
-msgstr "    “create-config”命令的选项："
+msgstr "    'create-config' 命令的选项："
 
 #: ../client/snapper.cc:383
 msgid "    Options for 'list' command:"
-msgstr "    “list”命令的选项："
+msgstr "    'list' 命令的选项："
 
 #: ../client/snapper.cc:731
 msgid "    Options for 'modify' command:"
-msgstr "    “modify”命令的选项："
+msgstr "    'modify' 命令的选项："
 
 #: ../client/snapper.cc:1220
 msgid "    Options for 'rollback' command:"
-msgstr "    “rollback”命令的选项："
+msgstr "    'rollback' 命令的选项："
 
 #: ../client/snapper.cc:913
 msgid "    Options for 'status' command:"
@@ -208,11 +214,11 @@ msgstr "    'status' 命令的选项："
 
 #: ../client/snapper.cc:1027
 msgid "    Options for 'undochange' command:"
-msgstr "    “undochange”命令的选项："
+msgstr "    'undochange' 命令的选项："
 
 #: ../client/snapper.cc:1325
 msgid "  Cleanup snapshots:"
-msgstr "  清理快照："
+msgstr "  清空快照："
 
 #: ../client/snapper.cc:1390
 msgid "  Comparing snapshots extended attributes:"
@@ -220,7 +226,7 @@ msgstr "  对比快照的扩展属性："
 
 #: ../client/snapper.cc:910 ../client/snapper.cc:965
 msgid "  Comparing snapshots:"
-msgstr "  比较快照："
+msgstr "  对比快照："
 
 #: ../client/snapper.cc:191
 msgid "  Create config:"
@@ -252,11 +258,11 @@ msgstr "  列出快照："
 
 #: ../client/snapper.cc:728
 msgid "  Modify snapshot:"
-msgstr "  修改快照："
+msgstr "  修订快照："
 
 #: ../client/snapper.cc:836
 msgid "  Mount snapshot:"
-msgstr "  装入快照："
+msgstr "  挂载快照："
 
 #: ../client/snapper.cc:1217
 msgid "  Rollback:"
@@ -272,7 +278,7 @@ msgstr "  卸载快照："
 
 #: ../client/snapper.cc:1024
 msgid "  Undo changes:"
-msgstr "  撤销更改："
+msgstr "  取消更改 (回滚)："
 
 #: ../client/snapper.cc:432 ../client/snapper.cc:481
 msgid "#"
@@ -282,32 +288,33 @@ msgstr "#"
 #: ../client/snapper.cc:1301 ../client/snapper.cc:1308
 #, c-format
 msgid "(Snapshot %d.)"
-msgstr "（快照 %d。）"
+msgstr "(快照 '%d'。)"
 
-#: ../client/snapper.cc:1669 ../client/errors.cc:88
+# error box title
+#: ../client/snapper.cc:1670 ../client/errors.cc:88
 msgid "ACL error."
-msgstr "ACL 错误。"
+msgstr "访问控制列表错误。"
 
 #: ../client/snapper.cc:436
 msgid "Cleanup"
-msgstr "清理"
+msgstr "清空"
 
-#: ../client/snapper.cc:1624
+#: ../client/snapper.cc:1625
 #, c-format
 msgid "Command '%s' does not work without DBus."
-msgstr "命令“%s”没有 DBus 不能运行。"
+msgstr "命令 '%s' 没有 DBus 不能运行。"
 
 #: ../client/snapper.cc:1337
 msgid "Command 'cleanup' needs one arguments."
-msgstr "“cleanup”命令需要一个自变量。"
+msgstr "命令 'cleanup' 需要一个参数。"
 
 #: ../client/snapper.cc:623
 msgid "Command 'create' does not take arguments."
-msgstr "“create”命令不接受自变量。"
+msgstr "命令 'create' 不接受参数。"
 
 #: ../client/snapper.cc:216
 msgid "Command 'create-config' needs one argument."
-msgstr "“create-config”命令需要一个自变量。"
+msgstr "命令 'create-config' 需要一个参数。"
 
 #: ../client/snapper.cc:1375
 msgid "Command 'debug' does not take arguments."
@@ -315,7 +322,7 @@ msgstr "命令 'debug' 不接受参数。"
 
 #: ../client/snapper.cc:794
 msgid "Command 'delete' needs at least one argument."
-msgstr "“delete”命令需要至少一个自变量。"
+msgstr "命令 'delete' 需要至少一个参数。"
 
 #: ../client/snapper.cc:274
 msgid "Command 'delete-config' does not take arguments."
@@ -327,19 +334,19 @@ msgstr "命令 'diff' 需要至少一个参数。"
 
 #: ../client/snapper.cc:304
 msgid "Command 'get-config' does not take arguments."
-msgstr "命令“get-config”不使用自变量。"
+msgstr "命令 'get-config' 不接受参数。"
 
 #: ../client/snapper.cc:1481
 msgid "Command 'help' does not take arguments."
-msgstr "“help”命令不接受自变量。"
+msgstr "命令 'help' 不接受参数。"
 
 #: ../client/snapper.cc:400
 msgid "Command 'list' does not take arguments."
-msgstr "“list”命令不接受自变量。"
+msgstr "命令 'list' 不接受参数。"
 
 #: ../client/snapper.cc:150
 msgid "Command 'list-configs' does not take arguments."
-msgstr "“list-configs”命令不接受自变量。"
+msgstr "命令 'list-configs' 不接受参数。"
 
 #: ../client/snapper.cc:753
 msgid "Command 'modify' needs at least one argument."
@@ -347,19 +354,19 @@ msgstr "命令 'modify' 需要至少一个参数。"
 
 #: ../client/snapper.cc:848 ../client/snapper.cc:885
 msgid "Command 'mount' needs at least one argument."
-msgstr "“mount”命令需要至少一个自变量。"
+msgstr "命令 'mount' 需要至少一个参数。"
 
 #: ../client/snapper.cc:1269
 msgid "Command 'rollback' only available for btrfs."
-msgstr "“rollback”命令只可用于 btrfs。"
+msgstr "命令 'rollback' 仅可用于 btrfs。"
 
 #: ../client/snapper.cc:1243
 msgid "Command 'rollback' takes either one or no argument."
-msgstr "“rollback”命令可使用一个自变量或不使用自变量。"
+msgstr "命令 'rollback' 接受一个或空参数。"
 
 #: ../client/snapper.cc:360
 msgid "Command 'set-config' needs at least one argument."
-msgstr "命令“set-config”至少需要一个自变量。"
+msgstr "命令 'set-config' 需要至少一个参数。"
 
 #: ../client/snapper.cc:930
 msgid "Command 'status' needs one argument."
@@ -367,25 +374,25 @@ msgstr "命令 'status' 需要一个参数。"
 
 #: ../client/snapper.cc:1044
 msgid "Command 'undochange' needs at least one argument."
-msgstr "“undochange”命令需要至少一个自变量。"
+msgstr "命令 'undochange' 需要至少一个参数。"
 
 #: ../client/snapper.cc:1416
 msgid "Command 'xadiff' needs at least one argument."
-msgstr "命令“xadiff”至少需要一个自变量。"
+msgstr "命令 'xadiff' 需要至少一个参数。"
 
 #: ../client/snapper.cc:157
 msgid "Config"
 msgstr "配置"
 
-#: ../client/snapper.cc:1644
+#: ../client/snapper.cc:1645
 #, c-format
 msgid "Config '%s' is invalid."
-msgstr "配置“%s”无效。"
+msgstr "配置 '%s' 无效。"
 
-#: ../client/snapper.cc:1639
+#: ../client/snapper.cc:1640
 #, c-format
 msgid "Config '%s' not found."
-msgstr "未找到配置“%s”。"
+msgstr "未找到配置 '%s'。"
 
 #: ../client/errors.cc:58
 msgid "Config is in use."
@@ -398,14 +405,14 @@ msgstr "配置已锁定。"
 #: ../client/misc.cc:181
 #, c-format
 msgid "Configdata '%s' does not include '=' sign."
-msgstr "配置数据“%s”未包含“=”符号。"
+msgstr "配置数据 '%s' 未包含 '=' 号。"
 
 #: ../client/misc.cc:190
 #, c-format
 msgid "Configdata '%s' has empty key."
-msgstr "配置数据“%s”包含空键。"
+msgstr "配置数据 '%s' 有空密钥。"
 
-#: ../client/snapper.cc:1654 ../client/errors.cc:70
+#: ../client/snapper.cc:1655 ../client/errors.cc:70
 #, c-format
 msgid "Creating config failed (%s)."
 msgstr "创建配置失败 (%s)。"
@@ -435,7 +442,7 @@ msgstr "创建快照失败。"
 msgid "Date"
 msgstr "日期"
 
-#: ../client/snapper.cc:1659 ../client/errors.cc:73
+#: ../client/snapper.cc:1660 ../client/errors.cc:73
 #, c-format
 msgid "Deleting config failed (%s)."
 msgstr "删除配置失败 (%s)。"
@@ -454,17 +461,17 @@ msgstr "检测文件系统类型失败。"
 
 #: ../client/misc.cc:170
 msgid "Empty configdata."
-msgstr "配置数据为空。"
+msgstr "空的配置数据。"
 
 #: ../client/misc.cc:107 ../client/misc.cc:115
 msgid "Empty userdata."
-msgstr "用户数据为空。"
+msgstr "空的用户数据。"
 
 #: ../client/snapper.cc:1198 ../client/snapper.cc:1208
 msgid "Failed to initialize filesystem handler."
-msgstr "无法初始化文件系统处理程序。"
+msgstr "初始化文件系统处理器失败。"
 
-#: ../client/systemd-helper.cc:127 ../client/snapper.cc:1698
+#: ../client/systemd-helper.cc:127 ../client/snapper.cc:1699
 msgid "Failure"
 msgstr "失败"
 
@@ -476,49 +483,50 @@ msgstr "失败 (%s)。"
 #: ../client/snapper.cc:1098
 #, c-format
 msgid "File '%s' not found."
-msgstr "未找到 '%s' 文件。"
+msgstr "未找到文件 '%s'。"
 
+# error box title
 #: ../client/errors.cc:67
 msgid "IO Error."
 msgstr "输入/输出错误。"
 
 #: ../client/misc.cc:94
 msgid "Identical snapshots."
-msgstr "相同的快照。"
+msgstr "重复的快照。"
 
 #: ../client/errors.cc:52
 msgid "Illegal Snapshot."
 msgstr "非法的快照。"
 
-#: ../client/snapper.cc:1664 ../client/errors.cc:49
+#: ../client/snapper.cc:1665 ../client/errors.cc:49
 msgid "Invalid configdata."
-msgstr "配置数据无效。"
+msgstr "无效的配置数据。"
 
-#: ../client/snapper.cc:1679 ../client/errors.cc:85
+#: ../client/snapper.cc:1680 ../client/errors.cc:85
 msgid "Invalid group."
-msgstr "组无效。"
+msgstr "无效组。"
 
 #: ../client/misc.cc:47 ../client/misc.cc:71
 #, c-format
 msgid "Invalid snapshot '%s'."
-msgstr "快照“%s”无效。"
+msgstr "无效的快照 '%s'。"
 
 #: ../client/misc.cc:85 ../client/snapper.cc:1066
 msgid "Invalid snapshots."
-msgstr "快照无效。"
+msgstr "无效的快照。"
 
 #: ../client/snapper.cc:223
 msgid "Invalid subvolume."
-msgstr "子卷无效。"
+msgstr "无效的子卷。"
 
 #: ../client/snapper.cc:1576
 #, c-format
 msgid "Invalid table style %d."
-msgstr "表样式 %d 无效。"
+msgstr "无效的表格样式 %d。"
 
-#: ../client/snapper.cc:1674 ../client/errors.cc:82
+#: ../client/snapper.cc:1675 ../client/errors.cc:82
 msgid "Invalid user."
-msgstr "用户无效。"
+msgstr "无效用户。"
 
 #: ../client/errors.cc:46
 msgid "Invalid userdata."
@@ -528,7 +536,7 @@ msgstr "无效的用户数据。"
 msgid "Key"
 msgstr "键"
 
-#: ../client/snapper.cc:1649
+#: ../client/snapper.cc:1650
 #, c-format
 msgid "Listing configs failed (%s)."
 msgstr "列出配置失败 (%s)。"
@@ -536,12 +544,12 @@ msgstr "列出配置失败 (%s)。"
 #: ../client/utils/GetOpts.cc:68
 #, c-format
 msgid "Missing argument for command option '%s'."
-msgstr "缺少命令选项“%s”的自变量。"
+msgstr "缺少用于 '%s' 命令选项的参数。"
 
 #: ../client/utils/GetOpts.cc:66
 #, c-format
 msgid "Missing argument for global option '%s'."
-msgstr "缺少全局选项“%s”的自变量。"
+msgstr "缺少用于 '%s' 全局选项的参数。"
 
 #: ../client/snapper.cc:685
 msgid "Missing command argument."
@@ -549,11 +557,11 @@ msgstr "缺少命令参数。"
 
 #: ../client/snapper.cc:679
 msgid "Missing or invalid pre-number."
-msgstr "缺少前快照编号或编号无效。"
+msgstr "缺失或无效的前期快照编号。"
 
-#: ../client/snapper.cc:1602
+#: ../client/snapper.cc:1603
 msgid "No command provided."
-msgstr "未提供任何命令。"
+msgstr "没有提供这个命令。"
 
 #: ../client/errors.cc:43
 msgid "No permissions."
@@ -562,33 +570,33 @@ msgstr "无权限。"
 #: ../client/snapper.cc:948 ../client/snapper.cc:1059
 #, c-format
 msgid "Opening file '%s' failed."
-msgstr "打开文件“%s”失败。"
+msgstr "打开文件 '%s' 失败。"
 
 #: ../client/snapper.cc:529
 msgid "Post #"
-msgstr "后快照编号"
+msgstr "后期 #"
 
 #: ../client/snapper.cc:531
 msgid "Post Date"
-msgstr "后快照日期"
+msgstr "后期快照日期"
 
 #: ../client/snapper.cc:433 ../client/snapper.cc:528
 msgid "Pre #"
-msgstr "前快照编号"
+msgstr "前期 #"
 
 #: ../client/snapper.cc:530
 msgid "Pre Date"
-msgstr "前快照日期"
+msgstr "前期快照日期"
 
 #: ../client/snapper.cc:1312
 #, c-format
 msgid "Setting default subvolume to snapshot %d."
-msgstr "正在设置快照 %d 的默认子卷。"
+msgstr "正在设置默认子卷为快照 %d。"
 
 #: ../client/misc.cc:54
 #, c-format
 msgid "Snapshot '%u' not found."
-msgstr "未找到快照“%u”。"
+msgstr "未找到快照 '%u'。"
 
 #: ../client/errors.cc:61
 msgid "Snapshot is in use."
@@ -598,10 +606,10 @@ msgstr "快照正在使用中。"
 msgid "Subvolume"
 msgstr "子卷"
 
-#: ../client/snapper.cc:1603 ../client/snapper.cc:1616
+#: ../client/snapper.cc:1604 ../client/snapper.cc:1617
 #: ../client/utils/GetOpts.cc:61 ../client/utils/GetOpts.cc:69
 msgid "Try 'snapper --help' for more information."
-msgstr "使用 'snapper --help' 了解更多信息。"
+msgstr "更多信息可尝试 'snapper help'。"
 
 #: ../client/snapper.cc:431
 msgid "Type"
@@ -610,12 +618,12 @@ msgstr "类型"
 #: ../client/snapper.cc:1357
 #, c-format
 msgid "Unknown cleanup algorithm '%s'."
-msgstr "未知清理算法“%s”。"
+msgstr "未知的清空算法 '%s'。"
 
-#: ../client/snapper.cc:1615
+#: ../client/snapper.cc:1616
 #, c-format
 msgid "Unknown command '%s'."
-msgstr "未知命令“%s”。"
+msgstr "未知命令 '%s'。"
 
 #: ../client/errors.cc:40
 msgid "Unknown config."
@@ -628,12 +636,12 @@ msgstr "未知文件。"
 #: ../client/utils/GetOpts.cc:58
 #, c-format
 msgid "Unknown global option '%s'."
-msgstr "未知全局选项“%s”。"
+msgstr "未知的全局选项 '%s'。"
 
 #: ../client/utils/GetOpts.cc:60
 #, c-format
 msgid "Unknown option '%s' for command '%s'."
-msgstr "未知选项“%s”（命令“%s”）。"
+msgstr "未知的选项 '%s' 用于命令 '%s'。"
 
 #: ../client/snapper.cc:651
 msgid "Unknown type of snapshot."
@@ -646,7 +654,7 @@ msgstr "未知快照类型。"
 #: ../client/snapper.cc:1577
 #, c-format
 msgid "Use an integer number from %d to %d."
-msgstr "使用一个从 %d 到 %d 的整数。"
+msgstr "请使用一个从 %d 到 %d 的整数。"
 
 #: ../client/snapper.cc:435 ../client/snapper.cc:483
 msgid "User"
@@ -659,12 +667,12 @@ msgstr "用户数据"
 #: ../client/misc.cc:126
 #, c-format
 msgid "Userdata '%s' does not include '=' sign."
-msgstr "用户数据“%s”未包含“=”符号。"
+msgstr "用户数据 '%s' 未包含 '=' 号。"
 
 #: ../client/misc.cc:135
 #, c-format
 msgid "Userdata '%s' has empty key."
-msgstr "用户数据“%s”包含空键。"
+msgstr "用户数据 '%s' 有空密钥。"
 
 #: ../client/snapper.cc:312
 msgid "Value"
@@ -688,22 +696,22 @@ msgstr "正在删除 %s"
 #: ../client/snapper.cc:1174
 #, c-format
 msgid "failed to create %s"
-msgstr "无法创建 %s"
+msgstr "创建 %s 失败"
 
 #: ../client/snapper.cc:1180
 #, c-format
 msgid "failed to delete %s"
-msgstr "无法删除 %s"
+msgstr "删除 %s 失败"
 
 #: ../client/snapper.cc:1177
 #, c-format
 msgid "failed to modify %s"
-msgstr "无法修改 %s"
+msgstr "修订 %s 失败"
 
 #: ../client/snapper.cc:1161
 #, c-format
 msgid "modifying %s"
-msgstr "正在修改 %s"
+msgstr "正在修订 %s"
 
 #: ../client/snapper.cc:1129
 msgid "nothing to do"
@@ -711,4 +719,22 @@ msgstr "无事可做"
 
 #: ../client/snapper.cc:1485
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
-msgstr "用法：snapper [--全局选项] <命令> [--命令选项] [命令自变量]"
+msgstr "用法：snapper  [--全局选项] <命令> [--命令选项] [命令参数]"
+
+#~ msgid "\t--disable-filters\t\tDisable filters."
+#~ msgstr "\t--disable-filters \t\t禁用过滤器。"
+
+#~ msgid "Command failed (%s). See log for more information."
+#~ msgstr "执行命令失败（ %s）。参考日志文件获取更多信息。"
+
+#~ msgid "comparing snapshots..."
+#~ msgstr "对比快照中..."
+
+#~ msgid "done"
+#~ msgstr "完成"
+
+#~ msgid "undoing change done"
+#~ msgstr "回滚完成"
+
+#~ msgid "undoing change..."
+#~ msgstr "正在回滚..."
