--- a/README
+++ b/README
@@ -9,10 +9,13 @@ For more information visit http://snapper.io/.
 Releasing
 =========
 
-Before releasing package ensure that changes made to package is mentioned
+Before releasing package ensure that changes made to package are mentioned
 in `package/snapper.changes`.
 To create package use commands `make -f Makefile.repo && make package`.
-Then use common work-flow to send package to build service. For factory
+Then use common work-flow to submit package to build service. For factory
 send at first package to devel project YaST:Head on OBS.
 
-When version is increased then <TODO>.
+When version is increased then git repo have to be tagged, obs project
+filesystems:snapper have to be updated and placing bzip2 on ftp.suse.com.
+When documentation changes e.g. man page or an important functionality, then
+also snapper.io webpages have to be updated.
