- turn on piwik for posts

--- a/_posts/2014-04-29-rollback.md
+++ b/_posts/2014-04-29-rollback.md
@@ -2,6 +2,7 @@
 title: Rollback - How to Recover from Boot Problems
 author: Arvin Schnell
 layout: post
+piwik: true
 ---
 
 As you might know it is possible to boot a btrfs snapshot of your root
