--- a/_posts/2014-01-30-sync-acl.md
+++ b/_posts/2014-01-30-sync-acl.md
@@ -2,6 +2,7 @@
 title: Sync Users and Groups to ACL of .snapshots
 author: Arvin Schnell
 layout: post
+piwik: true
 ---
 
 Snapper can now sync the users and groups from the ALLOW_USERS and
