--- a/dists/debian/changelog
+++ b/dists/debian/changelog
@@ -1,3 +1,9 @@
+snapper (0.5.0-0) stable; urgency=low
+
+  * Updated to version 0.5.0
+
+ -- Arvin Schnell <aschnell@suse.com>  Tue,  9 May 2017 21:30:55 +0200
+
 snapper (0.4.1-0) stable; urgency=low
 
   * Updated to version 0.4.1
