--- a/dists/debian/changelog
+++ b/dists/debian/changelog
@@ -1,3 +1,9 @@
+snapper (0.5.1) stable; urgency=low
+
+  * Updated to version 0.5.1
+
+ -- Ladislav Slezák <lslezak@suse.cz>  Thu, 03 Aug 2017 20:10:49 +0200
+
 snapper (0.5.0-0) stable; urgency=low
 
   * Updated to version 0.5.0
