--- a/dists/debian/changelog
+++ b/dists/debian/changelog
@@ -1,3 +1,9 @@
+snapper (0.5.6) stable; urgency=low
+
+  * Updated to version 0.5.6
+
+ -- Arvin Schnell <aschnell@suse.com>  Wed, 25 Jul 2018 08:34:01 +0200
+
 snapper (0.5.1) stable; urgency=low
 
   * Updated to version 0.5.1
